--- a/package.json
+++ b/package.json
@@ -1,28 +1,20 @@
 {
   "name": "phc-langchain",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon chroma.js",
     "dev": "nodemon chroma.js"
   },
-  "type": "module",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@google/genai": "^1.39.0",
     "@langchain/community": "^1.1.10",
     "@langchain/core": "^1.1.18",
     "@langchain/google-genai": "^2.1.14",
-    "@tailwindcss/vite": "^4.1.18",
     "chromadb": "^3.2.2",
     "express": "^5.2.1",
     "groq-sdk": "^0.37.0",
     "hnswlib-node": "^3.0.0",
-    "langchain": "^1.2.16",
-    "nodemon": "^3.1.11",
-    "tailwindcss": "^4.1.18"
+    "langchain": "^1.2.16"
   }
 }
